Fix code block contents overflowing the container
The text was being displayed outside the code block.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,4 +20,5 @@ core-menu {
 	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
 	border-radius: $spacing-unit / 12;
 	margin: $spacing-unit / 12;
+	overflow-x: auto;
 }
